--- a/roles/charts/tasks/main.yml
+++ b/roles/charts/tasks/main.yml
@@ -1,10 +1,20 @@
+- set_fact:
+    arch: "{{ architecture[ansible_architecture|lower] }}"
+
+- name: Install k9s
+  shell: "curl -Lf https://github.com/derailed/k9s/releases/download/v0.32.7/k9s_{{ansible_system | lower}}_{{arch}}.tar.gz -o k9s.tar.gz && tar -xvf k9s.tar.gz && mv k9s /usr/local/bin/k9s"
+  args:
+    creates: /usr/local/bin/k9s
+  become: true
+
 - name: Install helmfile
-  shell: "curl -Lf https://github.com/helmfile/helmfile/releases/download/v0.162.0/helmfile_0.162.0_linux_amd64.tar.gz -o helmfile.tar.gz && tar -xvf helmfile.tar.gz && chmod +x helmfile && mv helmfile /usr/local/bin/helmfile"
+  shell: "curl -Lf https://github.com/helmfile/helmfile/releases/download/v0.162.0/helmfile_0.162.0_{{ansible_system | lower}}_{{arch}}.tar.gz -o helmfile.tar.gz && tar -xvf helmfile.tar.gz && chmod +x helmfile && mv helmfile /usr/local/bin/helmfile"
   args:
     creates: /usr/local/bin/helmfile
   become: true
+
 - name: Install helm diff plugin
-  shell: helm plugin install https://github.com/databus23/helm-diff
+  shell: helm plugin list | grep diff || helm plugin install https://github.com/databus23/helm-diff
 - name: Copy helmfile and values files
   copy:
     src: "./files/{{item}}"
@@ -13,6 +23,7 @@
   - ingress-nginx-values.yaml
   - metrics-server-values.yaml
   - helmfile.yaml
+
 - name: Install local-path-provisioner
   shell: "kubectl apply -f https://raw.githubusercontent.com/rancher/local-path-provisioner/v0.0.26/deploy/local-path-storage.yaml"
 - name: Install Helm charts
