--- a/vars.yaml
+++ b/vars.yaml
@@ -1,7 +1,7 @@
 etcd_version: 3.5.17
-kubernetes_version: 1.32.0
-containerd_version: 2.0.1
-runc_version: 1.2.3
+kubernetes_version: 1.32.1
+containerd_version: 2.0.2
+runc_version: 1.2.4
 cni_version: 1.6.0
-flanneld_version: 0.26.2
-flannel_version: 1.6.0
+flanneld_version: 0.26.3
+flannel_version: 1.6.0-flannel1
