--- a/vars.yaml
+++ b/vars.yaml
@@ -1,10 +1,12 @@
-etcd_version: 3.5.18
-kubernetes_version: 1.32.2
-containerd_version: 2.0.2
-runc_version: 1.2.5
+etcd_version: 3.5.21
+kubernetes_version: 1.32.3
+containerd_version: 2.0.5
+runc_version: 1.2.6
 cni_version: 1.6.2
-flanneld_version: 0.26.4
+flanneld_version: 0.26.5
 flannel_version: 1.6.2-flannel1
-k9s_version: 0.32.7
+k9s_version: 0.40.10
 helmfile_version: 0.171.0
 local_path_provisioner_version: 0.0.31
+coredns_version: 1.39.2
+skip_download: false
